# pichamber

./: .gitignore  .npmignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  complex-output.md  eslint.config.js  eslint.config.ts  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: agent-integration.md  realtime.md  rpc.md
docs/decisions/: 0001-product-and-runtime.md
scripts/: dev-all.ts
src/: App.tsx  styles.css
src-server/: Cargo.toml  pty.ts  rpc.ts  server.ts  sessions.ts  tsconfig.json  workspace.ts
src-server/src/: main.rs  pty.rs  rpc.rs  server.rs  sessions.rs  state.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  rpc.rs  sessions.rs  workspace.rs
src/api/: client.ts
src/components/: BrandLogo.tsx  CommandPalette.tsx  IconButton.tsx  Markdown.tsx  Toaster.tsx
src/features/chat/: ChatEmptyState.tsx  ChatView.tsx  Composer.tsx  Message.tsx  ThinkingBlock.tsx  ToolBlock.tsx  UiRequestDialog.tsx  toolRenderers.test.ts  toolRenderers.ts
src/features/files/: Inspector.tsx
src/features/settings/: SettingsModal.tsx
src/features/terminal/: TerminalDock.tsx
src/features/workspace/: SessionBrowser.tsx  Sidebar.tsx  WorkspaceHeader.tsx
src/hooks/: use-resizable.ts  useDialogDismiss.ts
src/runtime/: events.test.ts  events.ts  normalize-events.ts  normalize.test.ts  normalize.ts  registry.ts  rpc-client.ts  tauri.ts  types.ts  use-pichamber.ts
src/stores/: app-store.test.ts  app-store.ts
tests/: setup.ts
tests/e2e/: workspace.spec.ts
