[package]
name = "pichamber"
version = "0.2.0"
description = "A browser-based workspace for the Pi Coding Agent"
authors = ["Pichamber contributors"]
edition = "2021"

[[bin]]
name = "pichamber"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Embed frontend build
rust-embed = "8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pi process management
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# PTY
portable-pty = "0.9"
libc = "0.2"

# File system + session scanning
walkdir = "2"

# CLI
which = "7"
thiserror = "2"

# WebSocket utilities
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
