[package]
name = "pichamber"
version = "0.1.0"
description = "A desktop workspace for the Pi Coding Agent"
authors = ["Pichamber contributors"]
edition = "2021"

[lib]
name = "pichamber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "fs"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"
walkdir = "2"
which = "7"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
libc = "0.2"

